--- a/src/assets/scss/base/_animation.scss
+++ b/src/assets/scss/base/_animation.scss
@@ -93,3 +93,13 @@
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
 }
+
+@keyframes border-pulsate {
+    0%   { border-color: $blue_button; }
+    50%  { border-color: rgba(0, 255, 255, 0); }
+    100% { border-color: $blue_button; }
+}
+
+.border-pulsate {
+    animation: border-pulsate 2s infinite;
+}
