--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $light_red:#F07777;
 
 $blue_2:#6FB4E1;
 $blue_3:#2e94fa; 
+$blue_4:#194CA7;
 $yellow_light:#FACD5D;
 $purple:#BF74DF;
 $yellow_light1:#FDF4E0;
