--- a/src/app/modules/register/pages/role-register/role-register.component.html
+++ b/src/app/modules/register/pages/role-register/role-register.component.html
@@ -1,22 +1,22 @@
 <div class="bg-blue-light h-screen w-screen relative">
     <div class="hidden lg:block  w-1/2  flex-1 bg-blue-light text-center ">
-        <div class="mx-auto w-full sticky top-20">
+        <div class="mx-auto w-full sticky top-52">
             <div class="p-20">
                 <img class="w-auto ml-8" src="../../../../../assets/images/logo.png">
             </div>
         </div>
     </div>
-    <div class="flex flex-col justify-center items-center">
-        <h1 class="popping font-medium leading-tight text-4xl mb-4 sm:text-5xl">Vous rejoignez en tant que ?</h1>
+    <div class="flex flex-col justify-center items-center mt-52">
+        <h1 class="popping leading-tight text-4xl font-extrabold mb-4 sm:text-5xl">Vous cherchez ?</h1>
         <div class="flex flex-row justify-between mt-10">
             <button (click) ="goToMemberRegister()"
-                class="bg-red-light hover:bg-blue-700 text-white popping font-semibold py-4  mr-2 w-96		 px-11 rounded-xl">TROUVER
+                class="bg-red-light hover:bg-blue-700 text-white popping font-semibold py-4  mr-2 w-96		 px-11 rounded-xl">
                 UN
                 LOCATAIRE</button>
             <button (click) ="goToPropertyRegister()"
-                class="bg-blue-2 hover:bg-blue-700 text-white popping font-semibold  py-3 px-11  w-96		ml-2 rounded-xl">TROUVER
+                class="bg-blue-2 hover:bg-blue-700 text-white popping font-semibold  py-3 px-11  w-96		ml-2 rounded-xl">
                 UN
-                BIEN</button>
+                BIEN IMMOBILIER</button>
         </div>
     </div>
 </div>
